--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,86 @@
-.App {
-  text-align: center;
+*{
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.root{
+  display: flex;
+  justify-content: center;
+  align-items: center; 
+  width: auto;
+  height: 620px;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container{
   display: flex;
   flex-direction: column;
+  background-color: hsl(240, 78%, 98%);
+  border-radius: 7px;
+  width: 250px;
+  height: auto;
   align-items: center;
+  cursor : default;
+  margin-left: 1rem;
+}
+
+.top{
+  display: flex;
+  justify-content: space-around;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+}
+.top-top{
+  color: hsl(232, 13%, 33%);
+  padding-bottom: 1rem;
+}
+.top-bottom{
+  color:hsl(232, 13%, 33%) ;
+}
+.middle-first{
+  padding: 0.5rem 0rem;
+  border-top: 1px solid  hsl(234, 14%, 74%)
+  ;
+  border-bottom: 1px solid hsl(234, 14%, 74%);
+  margin-bottom: 0.3rem;
+ width: 85%;
+ display: flex; 
+justify-content: center;
+color: hsl(232, 13%, 33%);}
+.middle-second{
+  color: hsl(232, 13%, 33%);
+border-bottom: 1px solid hsl(234, 14%, 74%);
+width: 85%;
+display: flex;
+justify-content: center;
+padding: 0.5rem 0rem;
+margin-bottom: 0.3rem;
+}
+.middle-third{
+  color:hsl(232, 13%, 33%) ;
+  display: flex;
+  padding: 0.5rem 0rem;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  margin-bottom: 1.5rem;
+  border-bottom: solid hsl(234, 14%, 74%) 1px;
+  width: 85%;
+}
+.bottom{
   color: white;
+  background-color: hsl(236, 72%, 79%) ;
+  width: 85%;
+  padding: 0.4rem;
+  display: flex;
+  justify-content: center;
+align-items: center;
+border-radius: 7px;
+margin-bottom: 1.5rem;
+cursor: pointer;
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.color {
+  background-color: hsl(237, 63%, 64%);
+  height: 330px;
+ margin-bottom: 2rem;
+ padding-bottom: 1rem;
 }
