--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,18 @@
-*{
+* {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
 }
-.root{
+
+.root {
   display: flex;
   justify-content: center;
-  align-items: center; 
+  align-items: center;
   width: auto;
   height: 620px;
 }
-.container{
+
+.container {
   display: flex;
   flex-direction: column;
   background-color: hsl(240, 78%, 98%);
@@ -18,11 +20,12 @@
   width: 250px;
   height: auto;
   align-items: center;
-  cursor : default;
+  cursor: default;
   margin-left: 1rem;
+  transition: ease-in-out 0.3s;
 }
 
-.top{
+.top {
   display: flex;
   justify-content: space-around;
   padding-top: 1rem;
@@ -31,34 +34,39 @@
   align-items: center;
   justify-content: space-around;
 }
-.top-top{
+
+.top-top {
   color: hsl(232, 13%, 33%);
   padding-bottom: 1rem;
 }
-.top-bottom{
-  color:hsl(232, 13%, 33%) ;
+
+.top-bottom {
+  color: hsl(232, 13%, 33%);
 }
-.middle-first{
+
+.middle-first {
   padding: 0.5rem 0rem;
-  border-top: 1px solid  hsl(234, 14%, 74%)
-  ;
+  border-top: 1px solid hsl(234, 14%, 74%);
   border-bottom: 1px solid hsl(234, 14%, 74%);
   margin-bottom: 0.3rem;
- width: 85%;
- display: flex; 
-justify-content: center;
-color: hsl(232, 13%, 33%);}
-.middle-second{
+  width: 85%;
+  display: flex;
+  justify-content: center;
   color: hsl(232, 13%, 33%);
-border-bottom: 1px solid hsl(234, 14%, 74%);
-width: 85%;
-display: flex;
-justify-content: center;
-padding: 0.5rem 0rem;
-margin-bottom: 0.3rem;
 }
-.middle-third{
-  color:hsl(232, 13%, 33%) ;
+
+.middle-second {
+  color: hsl(232, 13%, 33%);
+  border-bottom: 1px solid hsl(234, 14%, 74%);
+  width: 85%;
+  display: flex;
+  justify-content: center;
+  padding: 0.5rem 0rem;
+  margin-bottom: 0.3rem;
+}
+
+.middle-third {
+  color: hsl(232, 13%, 33%);
   display: flex;
   padding: 0.5rem 0rem;
   justify-content: center;
@@ -66,21 +74,23 @@ margin-bottom: 0.3rem;
   border-bottom: solid hsl(234, 14%, 74%) 1px;
   width: 85%;
 }
-.bottom{
+
+.bottom {
   color: white;
-  background-color: hsl(236, 72%, 79%) ;
+  background-color: hsl(236, 72%, 79%);
   width: 85%;
   padding: 0.4rem;
   display: flex;
   justify-content: center;
-align-items: center;
-border-radius: 7px;
-margin-bottom: 1.5rem;
-cursor: pointer;
+  align-items: center;
+  border-radius: 7px;
+  margin-bottom: 1.5rem;
+  cursor: pointer;
 }
+
 .color {
   background-color: hsl(237, 63%, 64%);
   height: 330px;
- margin-bottom: 2rem;
- padding-bottom: 1rem;
+  margin-bottom: 2rem;
+  padding-bottom: 1rem;
 }
